[gd_scene load_steps=3 format=3 uid="uid://c2gghcvx1ofok"]

[ext_resource type="Script" path="res://addons/event_sheet/elements/window/edit_variable_frame/edit_variable_frame.gd" id="1_np1tk"]
[ext_resource type="Script" path="res://addons/event_sheet/elements/window/parameters.gd" id="2_myck4"]

[node name="EditVariableFrame" type="Control"]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
size_flags_horizontal = 3
size_flags_vertical = 3
script = ExtResource("1_np1tk")

[node name="MarginContainer" type="MarginContainer" parent="."]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
size_flags_horizontal = 3
size_flags_vertical = 3
theme_override_constants/margin_left = 10
theme_override_constants/margin_top = 10
theme_override_constants/margin_right = 10
theme_override_constants/margin_bottom = 10

[node name="ScrollContainer" type="ScrollContainer" parent="MarginContainer"]
layout_mode = 2
size_flags_vertical = 3
horizontal_scroll_mode = 0
vertical_scroll_mode = 3

[node name="Parameters" type="VBoxContainer" parent="MarginContainer/ScrollContainer"]
layout_mode = 2
size_flags_horizontal = 3
script = ExtResource("2_myck4")

[node name="variable_name" type="HBoxContainer" parent="MarginContainer/ScrollContainer/Parameters"]
layout_mode = 2

[node name="Label" type="Label" parent="MarginContainer/ScrollContainer/Parameters/variable_name"]
custom_minimum_size = Vector2(55, 0)
layout_mode = 2
size_flags_vertical = 1
text = "Name: "
horizontal_alignment = 2
vertical_alignment = 1

[node name="LineEdit" type="LineEdit" parent="MarginContainer/ScrollContainer/Parameters/variable_name"]
layout_mode = 2
size_flags_horizontal = 3

[node name="variable_type" type="HBoxContainer" parent="MarginContainer/ScrollContainer/Parameters"]
layout_mode = 2

[node name="Label" type="Label" parent="MarginContainer/ScrollContainer/Parameters/variable_type"]
custom_minimum_size = Vector2(55, 0)
layout_mode = 2
size_flags_vertical = 1
text = "Type: "
horizontal_alignment = 2
vertical_alignment = 1

[node name="OptionButton" type="OptionButton" parent="MarginContainer/ScrollContainer/Parameters/variable_type"]
layout_mode = 2
size_flags_horizontal = 3

[node name="variable_value" type="HBoxContainer" parent="MarginContainer/ScrollContainer/Parameters"]
layout_mode = 2

[node name="Label" type="Label" parent="MarginContainer/ScrollContainer/Parameters/variable_value"]
custom_minimum_size = Vector2(55, 0)
layout_mode = 2
size_flags_vertical = 1
text = "Value: "
horizontal_alignment = 2
vertical_alignment = 1

[node name="LineEdit" type="LineEdit" parent="MarginContainer/ScrollContainer/Parameters/variable_value"]
layout_mode = 2
size_flags_horizontal = 3
